# shear

./: Cargo.toml  LICENSE  README.md  flake.nix  justfile
.github/workflows/: rust.yml
examples/: simple.rs  verbose.rs
src/: iter.rs  lib.rs  str.rs
src/str/: ellipsis.rs  trim_to_height.rs  trim_to_length.rs  trim_to_width.rs
tests/: iter_property_tests.proptest-regressions  iter_property_tests.rs  iter_unit_tests.rs  str.proptest-regressions  str.rs  strategy.rs  test_char_iter.rs
