[package]
authors                = ["katelyn martin <me+cratelyn@katelyn.world>"]
description            = "a library for trimming excess contents from things"
edition                = "2021"
name                   = "shear"
version                = "0.1.0"

[features]
default                = ["str"]
str                    = []

[dependencies]
tap                    = { version = "1.0.1" }

[dev-dependencies]
lazy_static            = { version = "1.4.0" }
proptest               = { version = "1.4.0" }
regex                  = { version = "1.10.5" }
