[package]
authors                = ["katelyn martin <me+cratelyn@katelyn.world>"]
description            = "a library for trimming excess contents from things"
edition                = "2021"
license                = "MIT"
name                   = "shear"
repository             = "https://github.com/cratelyn/shear"
version                = "0.3.0"

[features]
default                = ["str"]
str                    = []

[dependencies]
tap                    = { version = "1.0.1" }
unicode-width          = { version = "0.1.11" }

[dev-dependencies]
lazy_static            = { version = "1.4.0" }
proptest               = { version = "1.4.0" }
regex                  = { version = "1.10.5" }
